corrigé affichage boutton envoyer dans le profil

--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -5,7 +5,7 @@
     {{ form_row(form.documentFile) }}
     <small><strong>Formats autorisés :</strong> zip, pdf, doc, docx, jpg, xls, ppt, pptx</small>
 
-    <div class="text-right">
+    <div class="text-center mt-2">
         <button class="btn btn-success">{{ button_label|default('Envoyer') }} <i class="fas fa-file-upload"></i></button>
     </div>
 {{ form_end(form) }}
