--- a/templates/user/old-profil.html.twig
+++ b/templates/user/old-profil.html.twig
@@ -130,23 +130,23 @@
                          {# <h6 class="card-title text-center">Envoyer un document à mon conseiller</h6> #}
                         <form class="container-fluid mx-auto">
                             <div class="form-group">
-                                <label for="exampleFormControlSelect1">
+                                <label for="formControlSelect1">
                                     <p  class="label text-center">Quel est le type de votre document ?</p>
                                 </label>
-                                <select class="select form-control" id="exampleFormControlSelect1">
+                                <select class="select form-control" id="formControlSelect1">
                                     <option>Facture</option>
                                     <option>Compte rendu</option>
                                     <option>Publicité</option>
                                     <option>Autre</option>
                                 </select>
                             </div>
-                            <label for="exampleFormControlSelect1">
+                            <label for="formControlSelect1">
                                 <p class="label text-center">Téléchargement de mon document</p>
                             </label>
                             <div class="wrapper-backoffice">
                                 <div class="form-group">
-                                        <label for="exampleFormControlFile1"><strong>Formats autorisés :</strong> pdf, doc, docx, jpg, xls, ppt, pptx</label>
-                                        <input type="file" class="form-control-file" id="exampleFormControlFile1">
+                                        <label for="formControlFile1"><strong>Formats autorisés :</strong> pdf, doc, docx, jpg, xls, ppt, pptx</label>
+                                        <input type="file" class="form-control-file" id="formControlFile1">
                                 </div>   
                                 <button type="submit" class="btn btn-primary mb-2">
                                     Envoyer
