--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -24,31 +24,46 @@
             <section id="actu" class="container-fluid p-0 text-center py-3">
                 <!-- Section heading -->
                 <h2 class="titre h1-responsive font-weight-bold my-5">Actualités</h2>
-                {# <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        {% for post in articles %}
-                <div class="card mb-3 bg-white">
-                    {% if post.picture is not null %}
-                        <img class="card-img-top" style="max-height: 400px" src="{{ vich_uploader_asset(post, 'pictureFile') }}" alt="{{ post.title|default('illustration de l\'article') }}" />
-                    {% endif %}
-                    <div class="card-body">
-                        <h3 class="card-title">{{post.title}}</h3>
-                        <p class="card-text">{{ post.content|raw }}</p>
-                        <p class="card-text"><small class="text-muted">Posté le {{post.createdAt|date("d/m/y")}} par 
-                        <cite title="auteur">
-                            {{ attribute(post.author, '__toString') is defined ? post.author.__toString : post.rssfeedname|default('-') }}
-                        </cite></small></p>
-                    </div>
-                </div>
-                {% endfor %}
-                    </div>
-                </div>
-                </div> #}
 
 
-            <hr class="separator">
+                <!-- Début du carousel -->
+
+                <div class="bd-example">
+  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+      {% for post in articles %}
+        {% if post.picture is not null %}
+            <img class="d-block w-100" src="{{ vich_uploader_asset(post, ‘pictureFile’) }}" alt="{{ post.title|default("illustration de l\‘article") }}" />
+        {% endif %}
+        <div class="carousel-caption d-none d-md-block">
+          <h5>{{post.title}}</h5>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+<!-- fin du carousel -->
             </section>
+
+            {# {{dump (articles)}} #}
+            
+            <hr class="separator">
+            
             <!-- Citation Section -->
             <section id="about" class="container-fluid p-0 text-center py-3 mt-5">
                 <!-- Section heading -->
