Correction text-center Actualités

--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -9,7 +9,7 @@
 <div class="container-fluid p-0 m-5">
     <!-- Section Blog--> 
     <div class="container">
-        <h1 class="h2">Actualités</h1>
+        <h1 class="h2 text-center">Actualités</h1>
         {% for post in pagination %}
             <div class="card mb-3 bg-white">
                 {% if post.picture is not null %}
