--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -27,7 +27,7 @@
 
 
                 <!-- Début du carousel -->
-
+{# 
                 <div class="bd-example">
   <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -56,7 +56,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-</div>
+</div> #}
 <!-- fin du carousel -->
             </section>
 
