Correction height form Home

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -654,3 +654,7 @@ td > a > i:hover {
     display: flex !important;
     justify-content: space-around !important;
 }
+
+.form-group > textarea {
+    height: 200px;
+} 
