--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -90,7 +90,7 @@
                                 Notre souhait : être présents à vos côtés au quotidien pour relever les défis de l'office.
                                 </p>
                             <!--Avatar-->
-                                <div class="avatar mx-auto mb-4">
+                                <div class="avatar mx-auto">
                                 <img src="{{ asset('images/ynovagroup_logo.png') }}" class="rounded-circle img-fluid"
                                     alt="Ynovagroup Logo" width="300" height="100">
                                 </div>
