--- a/templates/bundles/TwigBundle/Exception/error.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ynovagroup - Votre groupement de pharmaciens indépendants{% endblock %}
+{% block title %}Votre groupement de pharmaciens indépendants{% endblock %}
 
+{% block body %}
 <div class="container-fluid text-center error">
     <h1>Erreur</h1>
     <p>La page que vous cherchez semble introuvable ou n'existe pas...</p>
@@ -10,7 +11,4 @@
         <i class="fas fa-home"></i>
     </button>
 </div>
-
-{% block body %}
-
 {% endblock %}
