--- a/templates/bundles/TwigBundle/Exception/error503.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error503.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ynovagroup - Votre groupement de pharmaciens indépendants{% endblock %}
+{% block title %}Votre groupement de pharmaciens indépendants{% endblock %}
 
 {% block body %}
 <div class="container-fluid text-center mt-5 maintenance">
