--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,18 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ynovagroup - Votre groupement de pharmaciens indépendants{% endblock %}
+{% block title %}Votre groupement de pharmaciens indépendants{% endblock %}
 
+{% block body %}
 <div class="container-fluid text-center error404">
     <span>Oups !</span>
     <h1>Erreur 404</h1>
     <p>La page que vous cherchez semble introuvable ou n'existe pas...</p>
-    <button class="btn btn-success">
+    <a href="{{ path('home') }}" class="btn btn-success">
         Retourner à l'accueil
         <i class="fas fa-home"></i>
-    </button>
+    </a>
 </div>
-
-
-{% block body %}
-
 {% endblock %}
