--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -89,7 +89,7 @@
                                 </p>
                             <!--Avatar-->
                                 <div class="avatar mx-auto">
-                                <img src="{{ asset('images/ynovagroup_logo.png') }}" class="rounded-circle img-fluid"
+                                <img src="{{ asset('images/logo_ynovagroup.png') }}" class="rounded-circle img-fluid"
                                     alt="Ynovagroup Logo" width="300" height="100">
                                 </div>
                                 <h6 class="font-weight-lighter">Votre groupement de pharmaciens indépendants</h6>
