--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -7,10 +7,10 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner">
-    
+        <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
         <div style="height:200px;" class="carousel-item active">
             <img class="d-block w-100" src="{{ asset('images/ecoute.jpg') }}" alt="">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-none d-md-block mt-5">
                 <h4>
                     {# <i class="fas fa-angle-double-right fa-1x"></i> #}
                     Écoute et disponibilité
@@ -52,6 +52,10 @@
             </div>
         </div>
 
+        <div class="interlude-home container-fluid p-0 text-center">
+                <h3 class="h3-responsive font-weight-bold mt-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
+                <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
+        </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
