--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -181,7 +181,7 @@
             <!-- N O T R E  D I F F E R E N C E -->
             <section id="difference">
                 <div class="container-fluid p-0 text-center">
-                    <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
+                    {# <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2> #}
                     {{ include('/home/_nosdifferences.html.twig') }}
                 </div>
                 {# <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
@@ -226,10 +226,10 @@
             </section>
             <!-- I N T E R L U D E -->
             <section>
-             <div class="container-fluid p-0 text-center m-5">
+             {# <div class="container-fluid p-0 text-center m-5">
                 <h3 class="h3-responsive font-weight-bold m-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
                 <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
-            </div>
+            </div> #}
             </section>
             <!-- N O S  O B J E C T I F S -->
             <section id="objectifs">
