Correctif .carousel-inner

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -200,7 +200,7 @@ li {
     min-width: 250px;
 }
 
-.carousel-inner {
+.carousel-inner-difference {
     height: 900px;
     position: relative;
 }
