--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -6,7 +6,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
     </ol>
-    <div class="carousel-inner">
+    <div class="carousel-inner-difference">
         <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
         <div style="height:200px;" class="carousel-item active">
             <img class="d-block w-100" src="{{ asset('images/ecoute.jpg') }}" alt="">
