retiré lien inutilisés, corrigé bug sur nom des routes, remplacé gestionnaires par pharmacien, ajouté info dans espace membre + retirer mentions inutlises

--- a/templates/backend/backend_layout.html.twig
+++ b/templates/backend/backend_layout.html.twig
@@ -14,7 +14,10 @@
     {% if current is not defined %}
         {% set current = null %}
     {% endif %}
-        {% include('/backend/partials/_navbar.html.twig') %}
+        {{ render(controller(
+            'App\\Controller\\Backend\\NavbarController::index',
+            { 'current': current }
+        )) }}
         <div class="row py-4">
             {{ render(controller(
                 'App\\Controller\\Backend\\SidebarController::index',
