--- a/templates/backend/partials/_sidebar.html.twig
+++ b/templates/backend/partials/_sidebar.html.twig
@@ -33,7 +33,7 @@
       <li class="nav-item">
         <a class="nav-link {{ (current == 'user')? 'link-green' : 'text-dark' }}" href="{{ path('backend_user_index') }}">
             <i class="fas fa-user-md"></i>
-            Gestionnaires
+            Pharmaciens
         </a>
       </li>
       <li class="nav-item">
