--- a/templates/backend/theme/_delete_form.html.twig
+++ b/templates/backend/theme/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('theme_delete', {'id': theme.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce thème ?');">
+<form method="post" action="{{ path('backend_theme_delete', {'id': theme.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce thème ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ theme.id) }}">
     <p class="text-right">
