--- a/templates/backend/user/edit.html.twig
+++ b/templates/backend/user/edit.html.twig
@@ -9,5 +9,5 @@
         {{ include('backend/user/_delete_form.html.twig') }}
         {{ include('backend/user/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     </div>
-    <a class="link-green" href="{{ path('backend_user_index') }}">Retour à la liste des utilisateurs</a>
+    <a class="link-green" href="{{ path('backend_user_index') }}">Retour à la liste des pharmaciens</a>
 {% endblock %}
