--- a/templates/backend/user/new.html.twig
+++ b/templates/backend/user/new.html.twig
@@ -8,7 +8,7 @@
         {{ include('backend/partials/_flash.html.twig') }}
         {{ include('backend/user/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     </div>
-    <a class="link-green" href="{{ path('backend_user_index') }}">Retour à la liste des utilisateurs</a>
+    <a class="link-green" href="{{ path('backend_user_index') }}">Retour à la liste des pharmaciens</a>
 
     {# {{ include('backend/user/_delete_form.html.twig') }} #}
 {% endblock %}
