--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -89,8 +89,11 @@
                                 </p>
                             <!--Avatar-->
                                 <div class="avatar mx-auto">
-                                <img src="{{ asset('images/ynovagroup_logo.png') }}" class="rounded-circle img-fluid"
-                                    alt="Ynovagroup Logo" width="300" height="100">
+                                {% if theme.picture is defined %}
+                                    <img class="rounded-circle img-fluid" width="300" height="100" src="{{ vich_uploader_asset(theme, 'pictureFile') }}" alt="{{ theme.name|default('logo Ynovagroup') }}">
+                                {% else %}
+                                    <img class="rounded-circle img-fluid" width="300" height="100" src="{{ asset('images/ynovagroup_logo.png') }}" alt="logo Ynovagroup">
+                                {% endif %}
                                 </div>
                                 <h6 class="font-weight-lighter">Votre groupement de pharmaciens indépendants</h6>
                             </div>
