--- a/templates/user/_panel_actualites.html.twig
+++ b/templates/user/_panel_actualites.html.twig
@@ -1,6 +1,6 @@
 <div class="tab-pane fade {{ (activePanel == 'actualite')? 'show active' }} p-3" id="home" role="tabpanel" aria-labelledby="home-tab">    
     <h5 class="h2 font-weight-bold text-success">Actualités</h5>
-    <em class="">Bienvenue sur votre espace personnel !<br> Retrouvez ici les actualités d'Ynovagroup</em>
+    <em class="">Bienvenue sur votre espace personnel !</em>
 
     <!-- Section Blog--> 
     <div class="container">
