--- a/templates/user/_panel_changer_mot_de_passe.html.twig
+++ b/templates/user/_panel_changer_mot_de_passe.html.twig
@@ -1,6 +1,6 @@
 <div class="tab-pane fade {{ (activePanel == 'password')? 'show active' }} p-3" id="password" role="tabpanel" aria-labelledby="password-tab">
         <h5 class="h2 font-weight-bold pt-1 text-success">Modifier mon mot de passe</h5>
-        <em class=" py-5">Bonjour {{ user.firstname }}, <br> ici vous pouvez modifier le mot de passe de votre espace adhérent.</em>
+        <em class=" py-5">ici vous pouvez modifier le mot de passe de votre espace adhérent.</em>
         <div class="card-body">
             {{ include('/security/changepassword.html.twig') }}
         </div>
