--- a/templates/user/_panel_documents.html.twig
+++ b/templates/user/_panel_documents.html.twig
@@ -1,8 +1,6 @@
 <div class="tab-pane fade {{ (activePanel == 'files')? 'show active' }} p-3" id="document" role="tabpanel" aria-labelledby="document-tab">
-        <h5 class="h2 font-weight-bold pt-1 text-success">Mon espace documents</h5>
-        <em class=" py-5">Bonjour {{ user.firstname }}, <br> ici vous pourrez transmettre, consulter et télécharger vos fichiers relatifs à vos échanges auprès de votre commercial attitré.</em>
+        <h5 class="h2 font-weight-bold text-success">Transmettre un document à mon commercial</h5>
         <div class="card-body">
-            <h5 class="h2 font-weight-bold mt-2 text-success">Transmettre un document à mon commercial</h5>
             {{ include('/user/_form.html.twig') }}
         </div>
         <div class="card-body">
