WIP Notre Différence

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -180,56 +180,9 @@
             </section>
             <!-- N O T R E  D I F F E R E N C E -->
             <section id="difference">
-                <div class="container-fluid p-0 text-center">
-                    {# <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2> #}
+                <div class="text-center">
                     {{ include('/home/_nosdifferences.html.twig') }}
                 </div>
-                {# <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
-                <div class="container-fluid p-0 text-center">
-                    <div class="panel">
-                        <div class="panel-box">
-                            <div class="panel-box-text m-3">
-                                <h4 class="h4-responsive font-weight-bold">
-                                    <i class="fas fa-angle-double-right fa-1x"></i>
-                                    Écoute et disponibilité
-                                </h4>
-                                <p class="font-weight-lighter m-5">Un interlocuteur proche de vous pour pérenniser le dynamisme de votre officine</p>
-                            </div>
-                            <div class="panel-box-text m-3">
-                                <h4 class="h4-responsive font-weight-bold">
-                                    <i class="fas fa-angle-double-right fa-1x"></i>
-                                    Une offre complète
-                                </h4>
-                                <p class="font-weight-lighter m-5">Une intervention sur les 4 dimensions clé de l'officine</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="panel">
-                        <div class="panel-box">
-                            <div class="panel-box-text m-3">
-                                <h4 class="h4-responsive font-weight-bold">
-                                    <i class="fas fa-angle-double-right fa-1x"></i>
-                                    Répondre à vos problématiques spécifiques
-                                </h4>
-                                <p class="font-weight-lighter m-5">Votre conseiller vous accompagne pour mettre en place un plan d'action personnalisé</p>
-                            </div>
-                            <div class="panel-box-text m-3">
-                                <h4 class="h4-responsive font-weight-bold">
-                                    <i class="fas fa-angle-double-right fa-1x"></i>
-                                    Toute votre équipe au ceur de nos préoccupations
-                                </h4>
-                                <p class="font-weight-lighter m-5">Une approche innovante de la formation et des supports techniques éprouvés</p>
-                            </div>
-                        </div>
-                    </div>    
-                </div>   #}
-            </section>
-            <!-- I N T E R L U D E -->
-            <section>
-             {# <div class="container-fluid p-0 text-center m-5">
-                <h3 class="h3-responsive font-weight-bold m-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
-                <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
-            </div> #}
             </section>
             <!-- N O S  O B J E C T I F S -->
             <section id="objectifs">
