--- a/public/css/app.css
+++ b/public/css/app.css
@@ -205,7 +205,7 @@ li {
 }
 
 .carousel-inner-difference {
-    height: 300px;
+    /* height: 300px; */
     position: relative;
 }
 
@@ -215,8 +215,8 @@ li {
 
 .carousel-caption {
     position: absolute;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 50px;
+    margin-right: 50px;
     left: 0;
     right: 0;
     z-index: 2;
@@ -240,7 +240,7 @@ li {
     right: 0;
     z-index: 2;
     top: 50%;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 
 .interlude-home > h3, p {
