--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -8,7 +8,7 @@
     </ol>
     <div class="carousel-inner-difference">
         <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
-        <div style="height:200px;" class="carousel-item active">
+        <div style="" class="carousel-item active">
             <img class="d-block w-100" src="{{ asset('images/ecoute.jpg') }}" alt="">
             <div class="carousel-caption d-none d-md-block mt-5">
                 <h4>
@@ -19,7 +19,7 @@
             </div>
         </div>
 
-        <div style="height:200px;" class="carousel-item">
+        <div style="" class="carousel-item">
             <img class="d-block w-100" src="{{ asset('images/offre.jpg') }}" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <h4>
@@ -30,7 +30,7 @@
             </div>
         </div>
 
-        <div style="height:200px;" class="carousel-item">
+        <div style="" class="carousel-item">
                 <img class="d-block w-100" src="{{ asset('images/problematique.jpg') }}" alt="">
                 <div class="carousel-caption d-none d-md-block">
                     <h4>
@@ -41,7 +41,7 @@
                 </div>
         </div>
 
-        <div style="height:200px;" class="carousel-item">
+        <div style="" class="carousel-item">
             <img class="d-block w-100" src="{{ asset('images/equipe.jpg') }}" alt="">
             <div class="carousel-caption d-none d-md-block">
                 <h4>
