--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -10,7 +10,7 @@
         <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
         <div style="" class="carousel-item active">
             <img class="d-block w-100" src="{{ asset('images/ecoute.jpg') }}" alt="">
-            <div class="carousel-caption d-none d-md-block mt-5">
+            <div class="carousel-caption">
                 <h4>
                     {# <i class="fas fa-angle-double-right fa-1x"></i> #}
                     Écoute et disponibilité
@@ -21,7 +21,7 @@
 
         <div style="" class="carousel-item">
             <img class="d-block w-100" src="{{ asset('images/offre.jpg') }}" alt="">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
                 <h4>
                     {# <i class="fas fa-angle-double-right fa-1x"></i> #}
                     Une offre complète
@@ -32,7 +32,7 @@
 
         <div style="" class="carousel-item">
                 <img class="d-block w-100" src="{{ asset('images/problematique.jpg') }}" alt="">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption">
                     <h4>
                         {# <i class="fas fa-angle-double-right fa-1x"></i> #}
                         Répondre à vos problématiques spécifiques
@@ -43,7 +43,7 @@
 
         <div style="" class="carousel-item">
             <img class="d-block w-100" src="{{ asset('images/equipe.jpg') }}" alt="">
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption">
                 <h4>
                     {# <i class="fas fa-angle-double-right fa-1x"></i> #}
                     Toute votre équipe au coeur de nos préoccupations
@@ -52,7 +52,7 @@
             </div>
         </div>
 
-        <div class="interlude-home container-fluid p-0 text-center">
+        <div class="interlude-home container-fluid p-0 text-center d-none d-md-block">
                 <h3 class="h3-responsive font-weight-bold mt-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
                 <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
         </div>
