--- a/public/css/app.css
+++ b/public/css/app.css
@@ -76,8 +76,8 @@ li {
 /* Hero Section */
 #hero {
     background-image: url('./../images/ynovagroup_hero_2.jpg');
-    background-repeat: repeat;
-    background-position: center;
+    /* background-repeat: repeat;
+    background-position: center; */
     /* filter: blur(8px);
     -webkit-filter: blur(8px); */
     backdrop-filter: blur(5px);
@@ -86,6 +86,11 @@ li {
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 #hero > div > h1 {
