--- a/templates/backend/company/_delete_form.html.twig
+++ b/templates/backend/company/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('backend_company_delete', {'id': company.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette pharmacie ? \nLes utilisateurs rattachés seront également supprimés');">
+<form method="post" action="{{ path('backend_company_delete', {'id': company.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette pharmacie ? \nLes pharmaciens rattachés seront également supprimés');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ company.id) }}">
     <p class="text-right">
