--- a/templates/backend/user/edit.html.twig
+++ b/templates/backend/user/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'backend/backend_layout.html.twig' %}
 
-{% block title %}Modification d'un utilisateur{% endblock %}
+{% block title %}Modification d'un pharmacien{% endblock %}
 
 {% block body %}
-    <h1>Modification d'un utilisateur</h1>
+    <h1>Modification d'un pharmacien</h1>
     <div class="card p-4">
         {{ include('backend/partials/_flash.html.twig') }}
         {{ include('backend/user/_delete_form.html.twig') }}
