--- a/templates/backend/user/index.html.twig
+++ b/templates/backend/user/index.html.twig
@@ -8,7 +8,7 @@
     <div class="card p-4">
         {{ include('backend/partials/_flash.html.twig') }}
         <div class="d-flex mb-3">
-            <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_user_create') }}"><i class="fas fa-plus-square"></i> Ajouter un utilisateur</a>
+            <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_user_create') }}"><i class="fas fa-plus-square"></i> Ajouter un pharmacien</a>
         </div>
         <table id="userTable" class="table table-hover table-striped w-100">
             <thead>
