--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -13,7 +13,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mx-auto">
-                {% if current == 'home' %}
+                {% if maintenance == true %}
+
+                {% elseif current == 'home' %}
                     <li class="nav-item {{ current == 'home'? 'active'}}">
                         <a class="nav-link" href="#">Accueil</a>
                     </li>
@@ -86,44 +88,70 @@
                         <a class="nav-link" href="{{ path('home') }}#contact">Contact</a>
                     </li>
                 {% endif %}
+
+                {% if maintenance == true %}
+                    {% if is_granted('ROLE_BUSINESS')%}
+                        <li class="nav-item adherent">
+                            <a class="nav-link btn btn-primary adherent-btn btn-sm text-white" href="{{ path('backend_notification') }}">
+                            Accès back office
+                            <i class="fas fa-sign-in-alt"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item adherent">
+                            <a class="nav-link btn btn-success adherent-btn btn-sm text-white" href="{{ path('app_logout') }}">
+                            Déconnexion
+                            <i class="far fa-paper-plane"></i>
+                            </a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item adherent">
+                            <a class="nav-link login-btn btn btn-success adherent-btn btn-sm text-white" href="{{ path('app_login') }}">
+                                <i></i>
+                                Connexion
+                                <i class="fas fa-sign-in-alt"></i>
+                            </a>
+                        </li>
+                    {% endif %}
+                {% else %}
                     <li class="nav-item">
                         <a class="nav-link {{ current == 'partenaires'? 'active'}}" href="{{ path('partenaires') }}">Partenaires</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {{ current == 'blog'? 'active'}}" href="{{ path('blog') }}">Actualités</a>
                     </li>
-                {% if is_granted('ROLE_BUSINESS')%}
-                    <li class="nav-item adherent">
-                        <a class="nav-link btn btn-primary adherent-btn btn-sm text-white" href="{{ path('backend_notification') }}">
-                        Accès back office
-                        <i class="fas fa-sign-in-alt"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item adherent">
-                        <a class="nav-link btn btn-success adherent-btn btn-sm text-white" href="{{ path('app_logout') }}">
-                        Déconnexion
-                         <i class="far fa-paper-plane"></i>
-                        </a>
-                    </li>
-                {% elseif is_granted('IS_AUTHENTICATED_REMEMBERED') %}
-                    <li class="nav-item adherent">
-                        <a class="nav-link login-btn btn btn-primary adherent-btn btn-sm text-white" href="{{ path('profil') }}">
-                            <i></i>
-                            Mon Espace
-                            <i class="far fa-user"></i>
-                        </a>
-                    </li>
-                    <li class="nav-item adherent">
-                        <a class="nav-link btn btn-danger adherent-btn btn-sm text-white" href="{{ path('app_logout') }}">Déconnexion</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item adherent">
-                        <a class="nav-link login-btn btn btn-success adherent-btn btn-sm text-white" href="{{ path('app_login') }}">
-                            <i></i>
-                            Espace Adhérent
+                    {% if is_granted('ROLE_BUSINESS')%}
+                        <li class="nav-item adherent">
+                            <a class="nav-link btn btn-primary adherent-btn btn-sm text-white" href="{{ path('backend_notification') }}">
+                            Accès back office
                             <i class="fas fa-sign-in-alt"></i>
-                        </a>
-                    </li>
+                            </a>
+                        </li>
+                        <li class="nav-item adherent">
+                            <a class="nav-link btn btn-success adherent-btn btn-sm text-white" href="{{ path('app_logout') }}">
+                            Déconnexion
+                            <i class="far fa-paper-plane"></i>
+                            </a>
+                        </li>
+                    {% elseif is_granted('IS_AUTHENTICATED_REMEMBERED') %}
+                        <li class="nav-item adherent">
+                            <a class="nav-link login-btn btn btn-primary adherent-btn btn-sm text-white" href="{{ path('profil') }}">
+                                <i></i>
+                                Mon Espace
+                                <i class="far fa-user"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item adherent">
+                            <a class="nav-link btn btn-danger adherent-btn btn-sm text-white" href="{{ path('app_logout') }}">Déconnexion</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item adherent">
+                            <a class="nav-link login-btn btn btn-success adherent-btn btn-sm text-white" href="{{ path('app_login') }}">
+                                <i></i>
+                                Espace Adhérent
+                                <i class="fas fa-sign-in-alt"></i>
+                            </a>
+                        </li>
+                    {% endif %}
                 {% endif %}
             </ul>
         </div>
