--- a/public/css/app.css
+++ b/public/css/app.css
@@ -109,6 +109,20 @@ li {
     color: var(--white);
 }
 
+/* Actu */
+.carousel-article > p {
+    overflow: scroll;
+}
+
+.button-actu > a {
+    color: white;
+    text-decoration: none;
+}
+.button-actu > a:hover {
+    color: white;
+    text-decoration: none;
+}
+
 /* Navigation Adhérents Button */
 .navbar-fixed-width {
     position: fixed;
@@ -174,6 +188,10 @@ li {
 
 .valeurs-text {
     min-width: 200px;
+}
+
+.valeurs-text > p {
+    color: black;
 }
 
 .valeurs-logo {
@@ -248,7 +266,11 @@ li {
     /* margin-top: 30px; */
 }
 
-.interlude-home > h3, p {
+.interlude-home > h3 {
+    color: white;
+}
+
+.interlude-home > p {
     color: white;
 }
 
