--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -23,48 +23,46 @@
             <!-- Citation Actu -->
             <section id="actu" class="container-fluid p-0 text-center py-3">
                 <!-- Section heading -->
-                <h2 class="titre h1-responsive font-weight-bold my-5">Actualités</h2>
-
-
+                <h2 class="titre h1-responsive font-weight-bold my-5">Les dernières actualités</h2>
                 <!-- Début du carousel -->
 
                 <div class="bd-example">
-  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-      {% for post in articles %}
-        {% if post.picture is not null %}
-            <img class="d-block w-100" src="{{ vich_uploader_asset(post, 'pictureFile') }}" alt="{{ post.title|default("illustration de l\‘article") }}" />
-        {% endif %}
-        <div class="carousel-caption d-none d-md-block">
-          <span>Posté le {{post.createdAt|date("d/m/y")}}</span>  
-          <h5>{{post.title}}</h5>
-          <button class="btn btn-light">
-            <a href="">En savoir plus</a>
-          </button>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
+                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner carousel-article-wrapper">
+                        <div class="carousel-item active">
+                        {% for post in articles %}
+                            {% if post.picture is not null %}
+                                <img class="d-block w-100" src="{{ vich_uploader_asset(post, 'pictureFile') }}" alt="{{ post.title|default("illustration de l\‘article") }}" />
+                            {% endif %}
+                            <div class="carousel-caption carousel-article d-none d-md-block">
+                                <span class="badge badge-light">Posté le {{post.createdAt|date("d/m/y")}}</span>
+                            <h5 class="font-weight-bold h3 m-5">{{post.title}}</h5>
+                            <p>{{ post.content|striptags|truncate(600, true) }}</p>
+                            {# <p>{{ post.content }}</p> #}
+                            <button class="btn btn-success button-actu m-5">
+                                <a href="">Lire la suite</a>
+                            </button>
+                            {% endfor %}
+                            </div>
+                        </div>
+                 </div>
+                {# <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a> #}
+            </div>
+            </div>
 <!-- fin du carousel -->
             </section>
-
-            {{dump (articles)}}
                         
             <!-- Citation Section -->
             <section id="about" class="container-fluid p-0 text-center py-3 mt-5">
