ajouté possibilité de créer un utilisateur admin

--- a/templates/backend/partials/_sidebar.html.twig
+++ b/templates/backend/partials/_sidebar.html.twig
@@ -60,7 +60,7 @@
       <li class="nav-item">
         <a class="nav-link {{ (current == 'business')? 'link-green' : 'text-dark' }}" href="{{ path('backend_salesrep_index') }}">
             <i class="fas fa-user-tie"></i>
-            Commerciaux
+            Utilisateurs
         </a>
       </li>
       <li class="nav-item">
