--- a/templates/backend/salesrep/edit.html.twig
+++ b/templates/backend/salesrep/edit.html.twig
@@ -1,15 +1,15 @@
 {% extends 'backend/backend_layout.html.twig' %}
 
-{% block title %}Modification d'un commercial{% endblock %}
+{% block title %}Modification d'un utilisateur{% endblock %}
 
 {% block body %}
-    <h1>Modification d'un commercial</h1>
+    <h1>Modification d'un utilisateur</h1>
     <div class="card p-4">
         {{ include('backend/partials/_flash.html.twig') }}
         {{ include('backend/salesrep/_delete_form.html.twig') }}
         {{ include('backend/user/_form.html.twig', {'button_label': 'Enregistrer'}) }}
     </div>
-    <a class="link-green" href="{{ path('backend_user_index') }}">Retour à la liste des commerciaux</a>
+    <a class="link-green" href="{{ path('backend_user_index') }}">Retour à la liste des utilisateurs</a>
 
     {# {{ include('backend/user/_delete_form.html.twig') }} #}
 {% endblock %}
