--- a/templates/backend/salesrep/index.html.twig
+++ b/templates/backend/salesrep/index.html.twig
@@ -1,14 +1,14 @@
 {% extends 'backend/backend_layout.html.twig' %}
 
-{% block title %}Liste des commerciaux{% endblock %}
+{% block title %}Liste des utilisateurs{% endblock %}
 
 {% block body %}
-    <h1>Liste des commerciaux</h1>
+    <h1>Liste des utilisateurs</h1>
 
     <div class="card p-4">
         {{ include('backend/partials/_flash.html.twig') }}
         <div class="d-flex mb-3">
-            <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_salesrep_create') }}"><i class="fas fa-plus-square"></i> Ajouter un commercial</a>
+            <a class="btn btn-success btn-sm" id="add-modal" href="{{ path('backend_salesrep_create') }}"><i class="fas fa-plus-square"></i> Ajouter un utilisateur</a>
         </div>
         <table id="salesrepTable" class="table table-hover table-striped w-100">
             <thead>
