--- a/templates/backend/partials/_sidebar.html.twig
+++ b/templates/backend/partials/_sidebar.html.twig
@@ -81,13 +81,20 @@
               Partenaires
           </a>
       </li>
+    </ul>
+    {% endif %}
+    <h4 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+      <span>Configuration</span>
+      <a class="d-flex align-items-center text-muted" href="#">
+      </a>
+    </h4>
+    <ul class="nav flex-column">
       <li class="nav-item">
           <a class="nav-link {{ (current == 'config')? 'link-green' : 'text-dark' }}" href="{{ path('backend_parameters') }}">
               <i class="fas fa-tools"></i>                         
-              Configuration
+              Paramètres
           </a>
       </li>
     </ul>
-    {% endif %}
   </div>
 </nav>
