--- a/templates/security/changepassword.html.twig
+++ b/templates/security/changepassword.html.twig
@@ -1,7 +1,7 @@
 <div class="col-12 col-sm-9 col-md-6 col-lg-5 my-2 py-3 mx-auto">
     {{ form_start(passwordForm) }}
         {{ form_widget(passwordForm) }}
-        <input type="hidden" name="_token" value="{{ csrf_token('changepassword' ~ user.id) }}">
+        <input type="hidden" name="_token" value="{{ csrf_token('changepassword' ~ app.user.id) }}">
         <div class="text-center my-3">
             <button class="btn btn-success">{{ button_label|default('Changer mon mot de passe') }} <i class="fas fa-unlock-alt"></i></button>
         </div>
