--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -16,6 +16,8 @@
                     Écoute et disponibilité
                 </h4>
                 <p>Un interlocuteur proche de vous pour pérenniser le dynamisme de votre officine</p>
+                <h3 class="h3-responsive font-weight-bold mt-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
+                <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
             </div>
         </div>
 
@@ -27,6 +29,8 @@
                     Une offre complète
                 </h4>
                 <p>Une intervention sur les 4 dimensions clé de l'officine</p>
+                <h3 class="h3-responsive font-weight-bold mt-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
+                <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
             </div>
         </div>
 
@@ -38,6 +42,8 @@
                         Répondre à vos problématiques spécifiques
                     </h4>
                     <p>Votre conseiller vous accompagne pour mettre en place un plan d'action personnalisé</p>
+                    <h3 class="h3-responsive font-weight-bold mt-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
+                    <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
                 </div>
         </div>
 
@@ -49,13 +55,15 @@
                     Toute votre équipe au coeur de nos préoccupations
                 </h4>
                 <p>Une approche innovante de la formation et des supports techniques éprouvés</p>
+                <h3 class="h3-responsive font-weight-bold mt-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
+                <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
             </div>
         </div>
 
-        <div class="interlude-home container-fluid p-0 text-center d-none d-md-block">
+        {# <div class="interlude-home container-fluid p-0 text-center d-none d-md-block">
                 <h3 class="h3-responsive font-weight-bold mt-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
                 <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
-        </div>
+        </div> #}
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
