corrigé affichage un article

--- a/templates/blog/single.html.twig
+++ b/templates/blog/single.html.twig
@@ -28,7 +28,7 @@
             <div class="blog-post my-5 p-3 text-center">
                 <p>Une erreur est survenue et l'article n'a pas pu être chargé</p>
             </div>
-        {% endfor %}
+        {% endif %}
     </div>
 </div>
 {% endblock %}
