corrigé affichage espace personnel

--- a/templates/user/profil.html.twig
+++ b/templates/user/profil.html.twig
@@ -4,8 +4,7 @@
 
 {% block body %}
 
-<em class="">Bienvenue sur votre espace personnel !<br>Retrouvez ici les informations de votre pharmacie</em>
-<div class="container" style="max-width:700px">
+<div class="container pt-4" style="max-width:700px">
     {{ include('/partials/_flash.html.twig') }}
 </div>
 <div class="container-fluid text-center bg-white">
