Carousel Nos Différences WIP

--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -5,10 +5,10 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
   </ol>
-  <div class="carousel-inner">
+  <div class="carousel-inner" style="position:relative;">
     <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
     <div class="interlude-home text-center">
-                <h3 class="h3-responsive font-weight-bold mt-5">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
+                <h3 class="h3-responsive font-weight-bold">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
                 <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
     </div>
     <div class="carousel-item active">
