--- a/public/css/app.css
+++ b/public/css/app.css
@@ -777,5 +777,8 @@ td > a > i:hover {
         margin-left: 0;
         margin-right: 0;
         z-index: 3;
-        padding: 0 150px;
+        /* padding: 0 25em; */
+        left: 50%;
+        transform: translate(-50%, 50%);
+        padding-bottom: 3em;
     }
