--- a/templates/home/_nosdifferences.html.twig
+++ b/templates/home/_nosdifferences.html.twig
@@ -8,34 +8,34 @@
   <div class="carousel-inner" style="position:relative;">
     <h2 class="titre-difference h1-responsive font-weight-bold mt-5">Notre différence</h2>
     <div class="interlude-home text-center">
-                <h3 class="h3-responsive font-weight-bold">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
+                <h3 class="h5 font-weight-bold">Nous intervenons sur les 4 dimensions clés de l'officine</h3>
                 <p>Chez Ynovagroup, nous disposons de techniques professionnelles et d'outils testés sur-mesure pour vous proposer un accompagnement quotidien sur les 4 dimensions clés de l'officine</p>
     </div>
     <div class="carousel-item active">
-        <img class="carousel-img w-100" src="{{ asset('images/ecoute.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(7px) grayscale(10%);" alt="">
+        <img class="carousel-img w-100" src="{{ asset('images/ecoute.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(7px) grayscale(20%);" alt="">
         <div class="carousel-caption d-none d-sm-block">
-            <h5 class="font-weight-bold h3">Écoute et disponibilité</h5>
+            <h5 class="font-weight-bold h5">Écoute et disponibilité</h5>
             <p>Un interlocuteur proche de vous pour pérenniser le dynamisme de votre officine</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="carousel-img w-100" src="{{ asset('images/offre.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(7px) grayscale(10%);" alt="">
+        <img class="carousel-img w-100" src="{{ asset('images/offre.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(7px) grayscale(20%);" alt="">
         <div class="carousel-caption d-none d-sm-block">
-            <h5 class="font-weight-bold h3">Une offre complète</h5>
+            <h5 class="font-weight-bold h5">Une offre complète</h5>
             <p>Une intervention sur les 4 dimensions clé de l'officine</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="carousel-img w-100" src="{{ asset('images/problematique.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(7px) grayscale(10%);" alt="">
+        <img class="carousel-img w-100" src="{{ asset('images/problematique.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(7px) grayscale(20%);" alt="">
         <div class="carousel-caption d-none d-sm-block">
-            <h5 class="font-weight-bold h3">Répondre à vos problématiques spécifiques</h5>
+            <h5 class="font-weight-bold h5">Répondre à vos problématiques spécifiques</h5>
             <p>Votre conseiller vous accompagne pour mettre en place un plan d'action personnalisé</p>
         </div>
     </div>
     <div class="carousel-item">
-        <img class="carousel-img w-100" src="{{ asset('images/equipe.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(7px) grayscale(10%);" alt="">
+        <img class="carousel-img w-100" src="{{ asset('images/equipe.jpg') }}" style="height: 500px !important;object-fit: cover; filter: blur(7px) grayscale(20%);" alt="">
         <div class="carousel-caption d-none d-sm-block">
-            <h5 class="font-weight-bold h3">Toute votre équipe au coeur de nos préoccupations</h5>
+            <h5 class="font-weight-bold h5">Toute votre équipe au coeur de nos préoccupations</h5>
             <p>Une approche innovante de la formation et des supports techniques éprouvés</p>
         </div>
     </div>
